# zed-gherkin

./: .gitignore  AGENTS.md  Cargo.toml  README.md  extension.toml
crates/gherkin-fmt/: Cargo.toml
crates/gherkin-fmt/src/: main.rs
crates/gherkin-lsp/: Cargo.toml
crates/gherkin-lsp/src/: expression.rs  indexer.rs  main.rs  server.rs
languages/gherkin/: config.toml  highlights.scm
src/: lib.rs
