[package]
name = "gherkin-lsp"
version = "0.1.0"
edition = "2021"
description = "Language server for Gherkin / Cucumber .feature files — go-to-definition and find-references across Python (behave, pytest-bdd) and JavaScript/TypeScript step definitions"
license = "MIT"

[[bin]]
name = "gherkin-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
